# chip8

./: .gitignore  CMakeLists.txt  README.md  build.ps1  chip8.ps1  run-tests.ps1
.github/workflows/: cmake-multi-platform.yml
src/: chip8.c  chip8.h  codes.h  main.c  monitor.c  monitor.h  program.h  program.txt  renderer.c  renderer.h  tests.c
